--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@
 
 .placeholder {
   margin: auto;
-  width: 100vw;
-  height: 100%;
+  width: auto;
+  height: 100vh;
 }
 
 .status-box {
@@ -25,7 +25,7 @@
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  background-color: rgba(195, 192, 192, 0.5);
+  background-color: rgba(192, 195, 192, 0.5);
   padding: 0;
 }
 
@@ -90,12 +90,13 @@ input[type=checkbox] {
   height: 50px;
   background: none;
   border: 4px solid red;
-  border-radius: 25px;
+  border-radius: 10px;
+  padding-right: 15px;
 }
 
 select.decorated {
   overflow: hidden;
-  margin-top: 3px;
+  margin-top: 0px;
 }
 
 select.decorated option:hover {
@@ -128,6 +129,10 @@ select.decorated option:hover {
 }
 
 @media only screen and (max-width: 750px) {
+  .placeholder {
+    width: 100vw;
+    height: auto;
+  }
   .instructions {
     margin-left: 20px;
     margin-right: 20px;
@@ -150,6 +155,11 @@ select.decorated option:hover {
   }
   input[type=checkbox] {
     transform: scale(1);
+  }
+  .animal-image {
+    width: 100vw;
+    height: 100vh;
+    cursor: pointer;
   }
 }
 
