--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,14 @@ select.decorated option:hover {
   height: auto;
 }
 
+.winning-time {
+  background-color: green;
+}
+
+.losing-time {
+  background-color: red;
+}
+
 .score-container {
   height: 100%;
   margin: auto;
