--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,8 @@
 .start-modal {
   width: 70%;
   height: auto;
-  position: fixed;
+  position: relative;
+  overflow: scroll;
   top: 10%;
   left: 15%;
   background-color:rgba(192, 195, 192, 0.5);
@@ -175,6 +176,7 @@
   padding: 1.5rem;
   width: 70%;
   margin: auto;
+  margin-bottom: 1rem;
   background-color: white;
   line-height: normal;
   font-size: 1.5rem;
@@ -186,11 +188,22 @@
   list-style: none;
 }
 
+.start-modal .tutorial-gif {
+  margin: auto;
+  margin-top: 1rem;
+  width: 80%;
+  height: auto;
+}
+
+.start-modal .tutorial-title {
+  margin: auto;
+}
+
 .start-modal .bottom-content {
+  margin-top: 2rem;
   background-color: rgba(219, 48, 219, 0.7);
   width: 70%;
   margin: auto;
-  margin-top: 2rem;
   display: flex;
   justify-content: space-around;
   border-radius: 20px;
@@ -242,7 +255,6 @@
     left: 0;
     width: 80%;
     margin: auto;
-    overflow: hidden;
   }
   .start-modal .instructions {
     width: 80%;
@@ -250,7 +262,7 @@
     font-size: 1.2rem;
   }
   .start-modal .bottom-content {
-    width: 95%;
+    width: 85%;
     padding: 0;
     margin: auto;
     margin-top: 0.5rem;
@@ -262,6 +274,13 @@
     margin-bottom: 1rem;
     height: 50px;
     width: 50%;
+  }
+
+  .start-modal .tutorial-gif {
+    margin: auto;
+    margin-top: 1rem;
+    width: 100%;
+    height: auto;
   }
 
   .score-modal {
