--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 .App {
   margin: auto;
   text-align: center;
-  height: 100vh;
 }
 
 .animal-image {
@@ -161,15 +160,11 @@
 }
 
 .start-modal {
-  width: 70%;
-  height: auto;
   position: relative;
-  overflow: scroll;
-  top: 10%;
-  left: 15%;
-  background-color:rgba(192, 195, 192, 0.5);
-  padding: 2rem;
-  border-radius: 20px;
+  margin: auto;
+  margin-top: 2rem;
+  width: 70%;
+  padding: 1rem;
 }
 
 .start-modal .instructions {
@@ -177,15 +172,7 @@
   width: 70%;
   margin: auto;
   margin-bottom: 1rem;
-  background-color: white;
-  line-height: normal;
   font-size: 1.5rem;
-  border-radius: 20px;
-}
-
-.start-modal .instructions > li{
-  margin: auto;
-  list-style: none;
 }
 
 .start-modal .tutorial-gif {
@@ -199,21 +186,6 @@
   margin: auto;
 }
 
-.start-modal .bottom-content {
-  margin-top: 2rem;
-  background-color: rgba(219, 48, 219, 0.7);
-  width: 70%;
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-  border-radius: 20px;
-}
-
-.start-modal .bottom-content .start-button {
-  margin: auto;
-  width: 100px;
-  height: 100px;
-}
 
 .score-modal {
   position: fixed;
@@ -250,30 +222,13 @@
 
 @media only screen and (max-width: 750px) {
   .start-modal {
-    position: relative;
-    top: 0;
-    left: 0;
+    margin-top: 0;
     width: 80%;
-    margin: auto;
   }
   .start-modal .instructions {
     width: 80%;
     padding-top: 0.5rem;
     font-size: 1.2rem;
-  }
-  .start-modal .bottom-content {
-    width: 85%;
-    padding: 0;
-    margin: auto;
-    margin-top: 0.5rem;
-    flex-direction: column;
-    font-size: 0.7rem;
-  }
-  .start-modal .bottom-content .start-button {
-    margin: auto;
-    margin-bottom: 1rem;
-    height: 50px;
-    width: 50%;
   }
 
   .start-modal .tutorial-gif {
